name:                location
version:             0.1
license:             MIT
license-file:        LICENSE
author:              Yacoby
build-type:          Simple
cabal-version:       >=1.10

executable location
  main-is:          location.hs
  build-depends:    base >=4.7 && <4.8, gps >= 1.2, time >= 1.4.2, aeson >= 0.8,
                    bytestring >= 0.10, containers >= 0.5.5, old-locale >= 1
  default-language: Haskell2010
